# whisper-widget

./: .cursorignore  .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py  setup.cfg  setup_env.sh  tasks.md  test_mic.py
.cursor/rules/: ignorelinetoolong.mdc
.github/workflows/: ci.yml
stubs/: faster_whisper.pyi  pyperclip.pyi  webrtcvad.pyi
stubs/gi/: __init__.pyi
stubs/openai/: __init__.pyi
tests/: conftest.py  requirements-test.txt  test_audio.py  test_config.py  test_keyboard.py  test_settings.py  test_transcription.py  test_ui.py  test_wake_word.py
whisper_widget/: __init__.py  app.py  config.py  settings.py  utils.py
whisper_widget/audio/: processor.py  transcriber.py
whisper_widget/static/: index.html
whisper_widget/ui/: menu.py  window.py
whisper_widget/utils/: audio_utils.py
