[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-widget"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A system tray widget for real-time speech-to-text transcription"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "faster-whisper",
    "numpy",
    "pyaudio",
    "webrtcvad",
    "PyGObject",
    "pyperclip",
    "pynput",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/whisper-widget"
"Bug Tracker" = "https://github.com/yourusername/whisper-widget/issues" 